--- a/style.css
+++ b/style.css
@@ -607,7 +607,9 @@ button {
 .about-img .img-box img {
     width: 100%;
 }
-
+.about-text p{
+    font-size: 20px;
+}
 .about-text h3 {
     text-transform: capitalize;
     font-size: 20px;
